--- a/javascript/oojs/introduction/oojs.html
+++ b/javascript/oojs/introduction/oojs.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Object-oriented JavaScript example</title>
   </head>
 
   <body>
-    <p>This example requires you to enter commands in your browser's JavaScript console (see <a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools">What are browser developer tools</a> for more information).</p>
-    
-    <script>
+    <p>
+      This example requires you to enter commands in your browser's JavaScript
+      console (see
+      <a
+        href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_are_browser_developer_tools"
+        >What are browser developer tools</a
+      >
+      for more information).
+    </p>
 
+    <script>
+      // create object
+      const person = {
+        name: ["Bob", "Smith"],
+        age: 32,
+        bio: function () {
+          console.log(
+            `${this.name[0]} ${this.name[1]} is ${this.age} years old`
+          );
+        },
+        introduceSelf: function () {
+          console.log(`Hi! I'm ${this.name[0]}.`);
+        },
+      };
+
+      // 2nd object
+      const objectName = {
+        member1Name: member1Value,
+        member2Name: member2Value,
+        member3Name: member3Value,
+      };
     </script>
   </body>
-
 </html>
