--- a/javascript/oojs/introduction/oojs.html
+++ b/javascript/oojs/introduction/oojs.html
@@ -22,12 +22,16 @@
       const person = {
         name: ["Bob", "Smith"],
         age: 32,
-        bio: function () {
+        // bio: function () {
+        bio() {
+          // simpler syntax
           console.log(
             `${this.name[0]} ${this.name[1]} is ${this.age} years old`
           );
         },
-        introduceSelf: function () {
+        // introduceSelf: function () {
+        introduceSelf() {
+          // simpler syntax
           console.log(`Hi! I'm ${this.name[0]}.`);
         },
       };
