--- a/javascript/oojs/introduction/oojs.html
+++ b/javascript/oojs/introduction/oojs.html
@@ -20,13 +20,19 @@
     <script>
       // create object
       const person = {
-        name: ["Bob", "Smith"],
+        // name: ["Bob", "Smith"],
+        name: {
+          // object within object
+          first: "Bob",
+          last: "Smith",
+        },
         age: 32,
         // bio: function () {
         bio() {
           // simpler syntax
           console.log(
-            `${this.name[0]} ${this.name[1]} is ${this.age} years old`
+            // `${this.name[0]} ${this.name[1]} is ${this.age} years old`
+            `${this.name.first} ${this.name.last} is ${this.age} years old`
           );
         },
         // introduceSelf: function () {
@@ -35,6 +41,15 @@
           console.log(`Hi! I'm ${this.name[0]}.`);
         },
       };
+
+      function logProperty(propertyName) {
+        console.log(person[propertyName]);
+      }
+
+      logProperty("name");
+      // ['Bob', 'Smith']
+      logProperty("age");
+      // 32
 
       // 2nd object
       const objectName = {
